--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/test
+db.url=jdbc:mysql://localhost:3306/new
 db.username=root
 db.password=qwer1234
 
